--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 448px;
+  max-width: 428px;
 }
 
 .works-subtitle {
